# mxx

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: main.yml
cmake/: lmw-config.cmake.in  lmw.cmake  mxx-config.cmake.in  mxx.cmake
docs/: Doxyfile.in
include/lmw/: lmw.cc  lmw.h  lmw_2.cc  lmw_atom.h  lmw_attribute.h  lmw_class.h  lmw_cstream.h  lmw_inlet.h  lmw_inlet_outlet_impl.h  lmw_message.h  lmw_message_impl.h  lmw_mutex.h  lmw_numeric.h  lmw_object.h  lmw_object_impl.h  lmw_outlet.h  lmw_port.h  lmw_symbol.h  lmw_threads.h  lmw_type_traits.h  lmw_types.h  lmw_wrapper.h  lmw_wrapper_functions.h  lmw_wrapper_preprocessor.h
include/mxx/: mxx.cc  mxx.h  mxx_2.cc  mxx_atom.h  mxx_attribute.h  mxx_buffer_info.h  mxx_buffer_lock.h  mxx_buffer_reference.h  mxx_class.h  mxx_cstream.h  mxx_inlet.h  mxx_inlet_outlet_impl.h  mxx_message.h  mxx_mutex.h  mxx_notify_target.h  mxx_numeric.h  mxx_outlet.h  mxx_port.h  mxx_symbol.h  mxx_texteditor.h  mxx_threads.h  mxx_type_traits.h  mxx_types.h  mxx_universal_helper.h  mxx_wrapper.h  mxx_wrapper_functions.h  mxx_wrapper_preprocessor.h
test/: CMakeLists.txt  mc.append_tilde.cc  mxx_test_bangh.cc  mxx_test_basicmc.cc  mxx_test_basicmc_tld.cc  mxx_test_buffer.cc  mxx_test_con_count.cc  mxx_test_con_count_tld.cc  mxx_test_dblclick.cc  mxx_test_delay1.cc  mxx_test_floath.cc  mxx_test_hotcold_inlet.cc  mxx_test_inletnum.cc  mxx_test_inth.cc  mxx_test_notify.cc  mxx_test_siginout.cc  mxx_test_siginout_tld.cc  mxx_test_userdsp64.cc  mxx_test_userdsp64_tld.cc  mxxx.cc
